--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-slate
-title: realBjornRoden at GitHub
+title: Cloud Actions
+description: Cloud Actions by realBjornRoden at GitHub
