--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Cloud Actions
-description: Cloud Actions by realBjornRoden at GitHub
+description: by @realBjornRoden at GitHub
