--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Cloud Actions
-description: by @realBjornRoden at GitHub
+title: Hobby Projects
+description: by [realBjornRoden](https://www.linkedin.com/in/roden/)
