--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Hobby Projects
-description: by [realBjornRoden](https://www.linkedin.com/in/roden/)
+description: by realBjornRoden
